First run of python with no gil

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 37.85570526123047,
         "position": {
-            "x": 2.6755776405334473,
-            "y": 22.951364517211914,
-            "z": -31.76228904724121
+            "x": 33.880863189697266,
+            "y": 24.3048152923584,
+            "z": 1.3718239068984985
         },
         "projection": 0,
         "target": {
-            "x": -3.4820523262023926,
-            "y": 20.80160140991211,
-            "z": -23.922527313232422
+            "x": 25.593944549560547,
+            "y": 18.717792510986328,
+            "z": 3.399632453918457
         },
         "type": "camera",
         "up": {
@@ -29,93 +29,6 @@
         "bloom": false,
         "bloomBrightness": -0.3230000138282776,
         "type": "world settings"
-    },
-    {
-        "children": [
-            [
-                {
-                    "attenuation": 2.7489071405544033e+20,
-                    "color": {
-                        "a": 0.0,
-                        "b": 0.0,
-                        "g": 7.805898063059785e-39,
-                        "r": 2.0205258990709375e+19
-                    },
-                    "cutOff": 0.5018532276153564,
-                    "direction": {
-                        "x": 2.7489071405544033e+20,
-                        "y": 1.9345910173343265e-19,
-                        "z": 1.8468664570276642e+25
-                    },
-                    "id": 0,
-                    "intensity": 1.9345910173343265e-19,
-                    "isChild": true,
-                    "light_type": 0,
-                    "name": "",
-                    "position": {
-                        "x": 7.92360305777705e+16,
-                        "y": 12.90001106262207,
-                        "z": -0.800000011920929
-                    },
-                    "relative_position": {
-                        "x": 7.92360305777705e+16,
-                        "y": 3.061136495317563e-41,
-                        "z": 0.0
-                    },
-                    "specularStrength": 1.8468664570276642e+25,
-                    "target": {
-                        "x": 2.7489071405544033e+20,
-                        "y": 1.9345910173343265e-19,
-                        "z": 1.8468664570276642e+25
-                    },
-                    "type": "light"
-                }
-            ]
-        ],
-        "collider_type": 0,
-        "id": 0,
-        "is_dynamic": false,
-        "mass": 1.0,
-        "material_path": "project/game/file3.mat",
-        "model_path": "project/game/models/monkey.obj",
-        "name": "monkey",
-        "normal_texture_path": "",
-        "position": {
-            "x": -7.499998092651367,
-            "y": 12.90001106262207,
-            "z": -0.800000011920929
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 46.66699981689453,
-            "z": 1.3329999446868896
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 2.0,
-            "y": 2.0,
-            "z": 2.0
-        },
-        "script_index": "NONE",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5139999985694885,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.0
-        },
-        "texture_path": "",
-        "type": "entity"
     },
     {
         "collider_type": 0,
@@ -187,7 +100,7 @@
                     "light_type": 0,
                     "name": "",
                     "position": {
-                        "x": 4.673388274515968e+15,
+                        "x": 2.4421630721654784e+16,
                         "y": 5.499999046325684,
                         "z": -0.3999999463558197
                     },
@@ -413,12 +326,12 @@
         "light_type": 0,
         "name": "",
         "position": {
-            "x": 8.05426627084288e+16,
+            "x": 7.92360305777705e+16,
             "y": 12.90001106262207,
             "z": -0.800000011920929
         },
         "relative_position": {
-            "x": 8.05426627084288e+16,
+            "x": 7.92360305777705e+16,
             "y": 0.0,
             "z": 0.0
         },
@@ -427,6 +340,43 @@
             "x": 2.7489071405544033e+20,
             "y": 1.9345910173343265e-19,
             "z": 1.8468664570276642e+25
+        },
+        "type": "light"
+    },
+    {
+        "attenuation": 0.0,
+        "color": {
+            "a": 255.0,
+            "b": 255.0,
+            "g": 0.0,
+            "r": 255.0
+        },
+        "cutOff": 0.0,
+        "direction": {
+            "x": 1.0,
+            "y": 1.0,
+            "z": 0.0
+        },
+        "id": 0,
+        "intensity": 1.0,
+        "isChild": false,
+        "light_type": 0,
+        "name": "",
+        "position": {
+            "x": 4.673388274515968e+15,
+            "y": 5.499999046325684,
+            "z": -0.3999999463558197
+        },
+        "relative_position": {
+            "x": 0,
+            "y": 0,
+            "z": 0
+        },
+        "specularStrength": 0.0,
+        "target": {
+            "x": 7.315397697878323e+34,
+            "y": 4.103702552775227e-41,
+            "z": 1.0
         },
         "type": "light"
     },
